Major update: Add all advanced features - Theme customization (dark/light), Advanced trig functions (asin/acos/atan), Hyperbolic functions (sinh/cosh/tanh), Visible calculation history, Memory functions (M+/M-/MR/MC), Angle modes (Degrees/Radians/Gradians), Decimal precision settings